# nextgen-data-engineering-platform

apps/gateway/: .env  pyproject.toml
apps/gateway/alembic/: env.py
apps/gateway/alembic/versions/: 81b646905f13_create_users_table.py
apps/gateway/app/: main.py
apps/gateway/app/api/routers/: database_health.py  health.py
apps/gateway/app/api/v1/: router.py
apps/gateway/app/application/health/: database.py  dto.py  service.py
apps/gateway/app/core/: app_info.py  config.py  exceptions.py  logging.py
apps/gateway/app/dependencies/: database.py  health.py
apps/gateway/app/domain/: user.py
apps/gateway/app/infrastructure/: base.py  database.py
apps/gateway/app/middleware/: request_id.py
apps/gateway/tests/: test_health.py
