[project]
name = "ngdep-gateway"
version = "0.1.0"
description = "NextGen Data Engineering Platform - API Gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "structlog>=25.4.0",
    "ngdep-common",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
ngdep-common = { path = "../../packages/common", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]